--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
     <!---link to stylesheet-->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <!---High Quality Web Icons - https://boxicons.com/-->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <!--header design-->
+    <!--styling the header-->
     <header>
-        <a href="#" class="logo">Cod <span>e</span>r.</a>
+        <a href="#" class="logo">Cod<span>e</span>r.</a>
         <ul class="navlist">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About Me</a></li>
@@ -31,9 +31,48 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
     </header>
+
+    <!--styling the home section-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <div class="slide">
+                <span class="one">Hello</span>
+                <span class="two">I'm</span>
+            </div>
+            <h1>Arbie</h1>
+            <h3>Lorem <span>ipsum.</span></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                Etiam sollicitudin libero felis, vitae commodo ex molestie ut.</p>
+            <div class="button">
+                <a href="#" class="btn">Say Hello</a>
+                <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
+            </div>
+        </div>
+    </section>
+    <!--styling the about me section-->
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/bckg2.jpg">
+        </div>
+
+        <div class="about-text">
+            <h2>About <span>Me</span></h2>
+            <h4>Creative UI/UX Designer!</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                Sed aliquet vitae velit dignissim dapibus. <br>
+                In eget hendrerit elit, ac blandit diam. Donec a tortor
+                lorem.</p>
+            <a href="#" class="btn">More About</a>
+        </div>
+
+    </section>
+
     <!---custom js link-->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
