--- a/main.html
+++ b/main.html
@@ -52,6 +52,7 @@
             </div>
         </div>
     </section>
+
     <!--styling the about me section-->
 
     <section class="about" id="about">
@@ -69,6 +70,172 @@
             <a href="#" class="btn">More About</a>
         </div>
 
+    </section>
+
+    <!--styling the about me section-->
+
+    <section class="services" id="services">
+        <div class="main-text">
+            <p>What am I Expert In</p>
+            <h2><span>My</span> Services</h2>
+        </div>
+
+        <div class="services-content">
+            <div class="box">
+                <div class="s-icons">
+                    <i class="bx bx-mobile-alt"></i>
+                </div>
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                    Sed aliquet vitae velit dignissim dapibus. <br>
+                    In eget hendrerit elit, ac blandit diam. Donec a tortor
+                    lorem.</p>
+                <a href="#" class="read">Read More</a>
+            </div>
+
+            <div class="box">
+                <div class="s-icons">
+                    <i class="bx bx-code-alt"></i>
+                </div>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                    Sed aliquet vitae velit dignissim dapibus. <br>
+                    In eget hendrerit elit, ac blandit diam. Donec a tortor
+                    lorem.</p>
+                <a href="#" class="read">Read More</a>
+            </div>
+
+            <div class="box">
+                <div class="s-icons">
+                    <i class="bx bx-edit-alt"></i>
+                </div>
+                <h3>Creative Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                    Sed aliquet vitae velit dignissim dapibus. <br>
+                    In eget hendrerit elit, ac blandit diam. Donec a tortor
+                    lorem.</p>
+                <a href="#" class="read">Read More</a>
+            </div>
+
+        </div>
+    </section>
+
+    <!--styling the portfolio section-->
+
+    <section class="portfolio" id="portfolio">
+        <div class="main-text">
+            <p>Portfolio</p>
+            <h2><span>Latest</span> Project</h2>
+        </div>
+
+        <div class="portfolio-content">
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="img/bckg2.jpg">
+                <div class="layer">
+                    <h5>Visual Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                        Sed aliquet vitae velit dignissim dapibus. <br>
+                        In eget hendrerit elit, ac blandit diam. Donec a tortor
+                        lorem.</p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--styling the contact section-->
+
+    <section class="contact" id="contact">
+        <div class="contact-text">
+            <h2>Contact</h2>
+            <h4>Visual Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+                Sed aliquet vitae velit dignissim dapibus. <br>
+                In eget hendrerit elit, ac blandit diam. Donec a tortor
+                lorem.</p>
+            <div class="list">
+                <li><a href="#">631545641</a></li>
+                <li><a href="#">test@gmail.com</a></li>
+                <li><a href="#">basdfkasb</a></li>
+            </div>
+
+            <div class="contact-icons">
+                <a href=""><i class='bx bxl-facebook-circle'></i></a>
+                <a href=""><i class='bx bxl-linkedin-square'></i></a>
+                <a href=""><i class='bx bxl-github'></i></a>
+                <a href=""><i class='bx bxl-instagram-alt'></i></a>
+            </div>
+
+            <div class="contact-form">
+                <form action="">
+                    <input type="name" placeholder="Your Name" required>
+                    <input type="email" placeholder="Email Address" required>
+                    <input type="" placeholder="Mobile Number" required>
+                    <textarea name="" id="" cols="35" rows="10" placeholder="How can I help you?"></textarea>
+                    <input type="submit" value="Send Message" class="submit" required>
+                </form>
+            </div>
+        </div>
     </section>
 
     <!---custom js link-->
