--- a/main.html
+++ b/main.html
@@ -207,8 +207,8 @@
 
     <section class="contact" id="contact">
         <div class="contact-text">
-            <h2>Contact</h2>
-            <h4>Visual Design</h4>
+            <h2>Contact <span>Me!</span></h2>
+            <h4>If you have any project in your mind.</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
                 Sed aliquet vitae velit dignissim dapibus. <br>
                 In eget hendrerit elit, ac blandit diam. Donec a tortor
@@ -220,24 +220,35 @@
             </div>
 
             <div class="contact-icons">
-                <a href=""><i class='bx bxl-facebook-circle'></i></a>
-                <a href=""><i class='bx bxl-linkedin-square'></i></a>
-                <a href=""><i class='bx bxl-github'></i></a>
-                <a href=""><i class='bx bxl-instagram-alt'></i></a>
+                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
             </div>
+        </div>
 
-            <div class="contact-form">
-                <form action="">
-                    <input type="name" placeholder="Your Name" required>
-                    <input type="email" placeholder="Email Address" required>
-                    <input type="" placeholder="Mobile Number" required>
-                    <textarea name="" id="" cols="35" rows="10" placeholder="How can I help you?"></textarea>
-                    <input type="submit" value="Send Message" class="submit" required>
-                </form>
-            </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="name" placeholder="Your Name" required>
+                <input type="email" placeholder="Email Address" required>
+                <input type="" placeholder="Mobile Number" required>
+                <textarea name="" id="" cols="35" rows="10" placeholder="How can I help you?"></textarea>
+                <input type="submit" value="Send Message" class="submit" required>
+            </form>
         </div>
     </section>
 
+    <!--styling the end section-->
+
+    <section class="end">
+        <div class="last-text">
+            <p>Copyright © 2023 by ARD All Rights Reserved.</p>
+        </div>
+
+        <div class="top">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </section>
     <!---custom js link-->
     <script type="text/javascript" src="script.js"></script>
 </body>
